# librcnb

./: .appveyor.yml  .gitignore  CMakeLists.txt  INSTALL  LICENSE  README  librcnb-config-version.cmake.in  librcnb-config.cmake.in
examples/: c-example1.c  c-example2.c  cpp-example3.cc  cpp-rcnb-cli.cc  python3-example.py
include/rcnb/: cdecode.h  cencode.h  decode.h  encode.h  rcnb.h
rcnb/: rcnb.cc
src/: cdecode.c  cencode.c  cencode_arm64.c  cencode_x86.c  rcnb.c  rcnb_arm64.c  rcnb_x86.c
